Updated code as per Java 21
Updated code as per Java 21